add erroe handling